new images and adjustments

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     <section class="section-3">
         <div class="flex-container-4">
             <div class="img-2">
-              <img src="images/images (2).jpeg" alt="">
+              <img src="" alt="">
             </div>
             <div class="text-box-3">
                 <h2>FIND YOUR PEOPLE</h2>
@@ -250,7 +250,7 @@
     <section class="section-4">
         <div class="flex-container-5">
             <div class="img-3">
-              <img src="images/photo.jpeg" alt="">
+              <img src="" alt="">
             </div>
             <div class="text-box-4">
                 <h3>FREE, OPEN, SIMPLE</h3>
