--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
             <div class="nav-bar">
                 <div class="flex-container-1">
                     <div class="logo">
-                        <p id="nav-logo">Fotf</p>
+                        <div id="nav-logo" ><img src="images/IMG_4830.PNG" height="150px" alt=""></div>
                     </div>
+                   
                     <div class="nav-products" onclick="toggleProducts()">
                         <p class="nav-main">Products<i class="fa fa-angle-down" id="pro-arrow"></i></p>
                         <div class="nav-links" id="nav-p">
@@ -68,7 +69,7 @@
             <h1>FACE OF THE FUTURE.</h1>
             <p> 
                 <a style=" 
-                    background: linear-gradient(90deg, #2D2F30 0%, #095FB6 100%);
+                    background: linear-gradient(90deg, #9888bf 0%, #f07474 100%);
                     -webkit-background-clip: text;
                     -webkit-text-fill-color: transparent;
 
@@ -82,6 +83,7 @@
                 <button class="btn-style-1" id="start-for-free">Join Us</button>
                 <button class="btn-style-2" id="learn-more">Learn More</button>
             </div>
+        </div>
         </div>
     </section>
 
@@ -264,7 +266,7 @@
     <section class="footer">
         <div class="flex-container-6">
             <div class="logo">
-                <p id="f-logo">FOTF</p>
+                <p id="f-logo"><img src="images/IMG_4830.PNG" alt="logo" height="150px"></p>
             </div>
             <div class="footer-products">
                 <p class="bold f-head">Product</p>
