--- a/index.html
+++ b/index.html
@@ -93,12 +93,19 @@
         <h2>Welcome To The FUTURE.</h2>
         <h2>Grab Your Popcorns & Lets Dive into the world CREATIVITY</h2>
         
+
+
         <section class="section-verse">
 
           <div class="scene">
         
             <div class="container" >
   
+              <h3>
+
+                A comet named Creatia streaked through the sky, leaving behind a trail of stardust. When it crashed into Earth, people found the stardust and felt a surge of inspiration. They used it to create art, music, and literature unlike anything ever seen before. And so, creativity was born from the magic of the stardust.
+
+              </h2>
 
               </div>
 
